      (Warning: the resulting binary can not be redistributed)

    GUI:
    * No limitation on the number of entries in a font description file
    * Dramatic speedup of scanning font description files
    * Playback improvements for cue sheet playlists
    * Implementation of audio playback utilizing ReplayGain data
    * New symbol character 'g' and new dynamic label variable $g


  1.3.0: "worksforme" February 16, 2016

    Decoders, demuxers, streams:
    * HLS streams can be played without ffmpeg:// prefix
    * Removed internal ADPCM decoders for DK3, DK4, MS, MS ima, QT ima
    * FFmpeg ADPCM audio decoders: THP, AICA, EA XAS, PSX, SbPro
    * FFmpeg audio decoders: DSD, DSS sp, Interplay ACM, Zork PCM,
      Xbox media 1 and 2, Ulead DV
    * FFmpeg video decoders: Screenpresso, Hap, more Go2Meeting formats,
      DXV, apng, AVS, CPiA, EA TGQ, EA TQI, Cryo HMN4, Canopus HQ, RSCC/ISCC,
      QTrle monochrome, Canopus C210, Drastic YUYV, Cineform HD

    Fixes:
    * fix many crashes with fuzzed files
    * fix errors for multichannels files and pulseaudio >= 6
    * fix lot of issues reported by Coverity

    Other:
    * MPlayer now depends also on libswresample
    * building with system FFmpeg libs is possible without a local copy of
      of private FFmpeg headers
    * docs building does not require FFmpeg anymore

    FFmpeg:
    * Fix compatibility with post 2.8 changes


  1.2.1:January 24, 2016

    Fixes:
    * misc GUI fixes
    * fix build regression in FreeBSD
    * fix many crashes with fuzzed files
    * fix errors for multichannels files and pulseaudio >= 6
    Other:
    * building with system FFmpeg libs is possible without a local copy of
      of private FFmpeg headers
    * docs building does not require FFmpeg anymore
    * FFmpeg updated to 2.8.5


  1.2: "FrameCounter" October 3, 2015

    Decoders:
    * Hardware accelerated decoding on OS X via VDA.
    * Internal libmpeg2 disabled by default, on the assumption